--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,17 @@
       <version>1.2.17</version>
     </dependency>
     <!--commons-fileupload-->
+    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.4</version>
+    </dependency>
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
@@ -214,6 +225,14 @@
       <artifactId>standard</artifactId>
       <version>1.1.2</version>
     </dependency>
+
+    <!--FastDFS-->
+    <dependency>
+      <groupId>org.csource.fastdfs</groupId>
+      <artifactId>fastdfs</artifactId>
+      <version>1.2</version>
+    </dependency>
+
     <!--pagehelper-->
     <dependency>
       <groupId>com.github.pagehelper</groupId>
